[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "zurvan"
version = "0.1.0"
description = "A small, composable Python framework for building goal-directed LLM agents (GAME loop + Capability hooks)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Ali Afsah-Noudeh", email = "aliafsah1988@gmail.com" }]
keywords = ["agent", "llm", "framework", "game-loop", "capability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = ["litellm>=1.50", "pydantic>=2"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/aliafsahnoudeh/zurvan"
Repository = "https://github.com/aliafsahnoudeh/zurvan"
Issues = "https://github.com/aliafsahnoudeh/zurvan/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zurvan"]

[tool.hatch.build.targets.sdist]
include = ["src/zurvan", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:litellm.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
